--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
                     <input type="text"
                         class="search-query span2"
                         placeholder="Search"
-                        ng-model="movie.name">
+                        ng-model="movie.title">
                 </div>
             </div>
         </div>
