--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,8 @@
 
     <script src="/components/angular/angular.js"></script>
     <script src="/components/angular-route/angular-route.js"></script>
+    <script src="/components/textAngular/dist/textAngular-sanitize.min.js"></script>
+    <script src="/components/textAngular/dist/textAngular.min.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/controller.js"></script>
 </body>
